styles/global/_button.scss
////
/// Buttons
/// @group global
/// @since v1.0.0
////

$button-defaults: (
  prefix: '%button',

  style: (
    base: (
      background: color(white) color(border, light),
      border: color(border) color(border, dark)
    ),
    primary: (
      background: color(primary)
    ),
    secondary: (
      background: color(link)
    ),
    ghost: (
      background: transparent color(white),
      border: color(white) color(border)
    ),
    link: (
      background: transparent,
      border: transparent,
      color: color(link) color(link, dark)
    )
  ),

  size: (
    base: gutter(small) gutter(base),
    small: gutter(smaller),
    large: gutter(base)
  ),

  radius: radius(),
  custom: circle square disabled
);

$button: () !default;
$button: map-merge-settings($button-defaults, $button);

@function button($settings...) {
  @return map-deep-get($button, $settings...);
}

@mixin button-style($style: base) {
  $background: button(style, $style, background);
  $background-hover: nth($background, length($background));

  @if length($background) > 1 {
    $background: nth($background, 1);
  } @else {
    $background-hover: darken($background-hover, 5%);
  }

  $border: if(button(style, $style, border), button(style, $style, border), $background);
  $border-hover: nth($border, length($border));

  @if length($border) > 1 {
    $border: nth($border, 1);
  }

  $color: button(style, $style, color);
  $color-hover: $color;

  $color: if($color,
    nth($color, 1),
    contrast($background, $dark: color(text, small))
  );

  $color-hover: if($color-hover,
    nth($color-hover, length($color-hover)),
    contrast($background-hover, $dark: color(text, small))
  );

  background-color: $background;
  border: 1px solid $border;
  color: $color;

  &:hover,
  &--hover {
    background-color: $background-hover;
    border-color: $border-hover;
    color: $color-hover;
  }
}

@mixin button-size($size: button(size, base)) {
  padding: $size;
}

%_button-reset {
  appearance: none;
  border: 0;
  cursor: pointer;
  text-decoration: none;
  user-select: none;

  &--hover,
  &--focus,
  &:active,
  &:focus {
    outline: none;
  }

  &--disabled,
  &:disabled {
    @extend %_button-custom-disabled;
  }
}

%_button-base {
  @include button-size;

  border-radius: button(radius);
  font-weight: font(weight, bold);
}

// Extra button styles
%_button-custom {
  &-disabled {
    cursor: not-allowed;
    opacity: .45;
  }

  &-circle {
    border-radius: 1000px;
  }

  &-square {
    border-radius: 0;
  }
}

@mixin button-placeholders {
  #{button(prefix)} {
    @each $style, $color in button(style) {
      &-#{$style} {
        @extend %_button-reset;
        @extend %_button-base;
        @extend %_button-custom-#{$style} !optional;
        @include button-style($style);
      }

      @each $size, $value in button(size) {
        &-#{$size} {
          @include button-size($value);
        }
      }

      @each $style in button(custom) {
        &-#{$style} {
          @extend %_button-custom-#{$style};
        }
      }
    }
  }
}

@mixin button-group-placeholders {
  #{button(prefix)}-group {
    float: left;
    list-style: none;
    margin: 0;
    padding: 0;
    white-space: nowrap;

    &__item {
      float: left;
    }

    &__button {
      @extend #{button(prefix)}-base;
      @extend #{button(prefix)}-square;

      &--not-last-child {
        border-right: 0;
      }

      &--first-child {
        border-bottom-left-radius: radius();
        border-top-left-radius: radius();
      }

      &--last-child {
        border-bottom-right-radius: radius();
        border-top-right-radius: radius();
      }

      &--active {
        @extend #{button(prefix)}-secondary;
        @extend #{button(prefix)}-square;
      }
    }

    &--block {
      @extend #{grid(prefix, row)};
      @extend #{grid(prefix, row)}-middle;

      float: none;

      &__item {
        @extend #{grid(prefix, col)}-fill;
        @extend #{grid(prefix, row)};
      }

      &__button {
        @extend #{grid(prefix, col)}-fill;

        text-align: center;
      }
    }

    &--small {
      position: relative;

      &__button {
        @extend #{button(prefix)}-small;
      }
    }

    &--large {
      position: relative;

      &__button {
        @extend #{button(prefix)}-large;
      }
    }
  }
}

@include exports('paint-button') {
  @include button-placeholders;
  @include button-group-placeholders;
}

